syntax = "proto3";

package rivet.backend.pkg.chat_thread.participant_list;

import "proto/common.proto";
import "proto/backend/chat.proto";

message Request {
	repeated rivet.common.Uuid thread_ids = 1;
}

message Response {
	message Participant {
		rivet.common.Uuid user_id = 1;
	}

	message Thread {
		rivet.common.Uuid thread_id = 1;
		repeated Participant participants = 2;
	}

	repeated Thread threads = 1;
}
