syntax = "proto3";

package rivet.backend.pkg.chat_thread.recent_for_user;

import "proto/common.proto";
import "proto/backend/chat.proto";

message Request {
	rivet.common.Uuid user_id = 1;
	optional int64 after_ts = 2;
}

message Response {
	message ThreadWithTail {
		rivet.backend.chat.Thread thread = 1;
		optional rivet.backend.chat.Message tail_message = 2;
	}

	repeated ThreadWithTail threads = 1;
}
